--- a/sass/base/_config.scss
+++ b/sass/base/_config.scss
@@ -7,7 +7,7 @@
 
 // Colors
 $color-links: #045d30;
-$color-hover: #606c76;
+$color-hover: #111;
 $color-body: #222;
 $color-headings: #222;
 $color-body-darker: #444;
